updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I love creating and designing!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Francisco, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Dancing and Traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creating and Developing projects that impact and inspire the world.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Los Angeles, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love creation, design, and innovation.  Technology is moving so fast and is our future.  I want to learn as much as I can.  I want to be able to bring ideas to life and understand how to confidently develop, create, and design projects.</p>
     </section>
 
     <footer id="footer">
