--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I love creating and designing!</p>
       <h1>Where I'm From</h1>
-      <p>San Francisco, CA</p>
+      <p>San Francisco, CA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Dancing and Traveling</p>
+      <p>I love dancing and traveling.</p>
       <h1>What's your dream job?</h1>
-      <p>Creating and Developing projects that impact and inspire the world.</p>
+      <p>Creating and developing projects that impact and inspire the world.</p>
       <h1>Where do you live?</h1>
-      <p>Los Angeles, CA</p>
+      <p>Los Angeles, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I love creation, design, and innovation.  Technology is moving so fast and is our future.  I want to learn as much as I can.  I want to be able to bring ideas to life and understand how to confidently develop, create, and design projects.</p>
+      <p>I love creativity, innovation, and design.  Technology is moving so fast and is our future.  I would love to learn as much as I can about it.  I would love to be able to bring ideas to life in ways that haven't been done before.  I want to understand how to confidently develop cool, creative, and innovative projects from scratch.</p>
     </section>
 
     <footer id="footer">
